--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore application.properties to avoid committing passwords and secrets
+src/main/resources/application.properties
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
