--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ jwt.expirationMs=1000*60*5 # 1000 for milliseconds, 60 for seconds, 5 for minute
 # ================== Database Configuration ==================
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/E-Commerce
 spring.datasource.username=root
-spring.datasource.password=Akshit@1179
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ================== JPA / Hibernate ==================
