--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 spring.application.name=E-commerceMiniStore
 
-# application.properties
+# JWT Configuration
 jwt.secret=AnmolKey283_ThisIsASecureKeyForJWT_2025_ExtraChars
-jwt.expirationMs=1000*60*5 # 1000 for milliseconds, 60 for seconds, 5 for minutes (5 minutes)
-
+jwt.expirationMs=86400000
 
 # ================== Database Configuration ==================
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/E-Commerce
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Anmol_287
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ================== JPA / Hibernate ==================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # ================== Server ==================
 server.port=8080
+
+# Logging for debugging
+logging.level.com.example.E_commerceMiniStore.security=DEBUG
+logging.level.org.springframework.security=DEBUG
