--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=E-commerceMiniStore
 
 # JWT Configuration
-jwt.secret=AnmolKey283_ThisIsASecureKeyForJWT_2025_ExtraChars
+jwt.secret=${JWT_SECRET}
 jwt.expirationMs=86400000
 
 # ================== Database Configuration ==================
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=Anmol_287
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ================== JPA / Hibernate ==================
