--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ jwt.expirationMs=300000
 
 
 # ================== Database Configuration ==================
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=Anmol_287
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/your_db_name
+spring.datasource.username=you_username
+spring.datasource.password=your_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ================== JPA / Hibernate ==================
