--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 spring.application.name=api-gateway
 
 # Gateway Configuration
-spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.enabled=false
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # CORS Configuration
